# ols-ucentral-client

./: .gitignore  Dockerfile  Makefile  PKI2.0.md  PREREQUISITES.md  QUICK_START_TESTING.md  README.md  TESTING_FRAMEWORK.md  TEST_CONFIG_PARSER_DESIGN.md  TEST_RUNNER_README.md  build.sh  build_est_client.sh  docker-build-client.sh  dpkg-builder.Dockerfile  go.mod  partition_script.sh  run-config-tests.sh  version.json
cmd/: client.go  commands.go  event.go  model_cmd.go  model_script.go  msg.go  ols_state.go  ols_state_model.go  persistent.go  platform.go  redis.go
config/: config.go
config-samples/: Readme.txt  cfg-28port-3vlan-many-properties.json  cfg-lldp.json  cfg0.json  cfg1.json  cfg2.json  cfg3.json  cfg4.json  cfg5_poe.json  cfg6_dhcp.json  cfg7_ieee8021x.json  cfg_igmp.json  cfg_igmp_wave_v2.json  cfg_invalid_interfaces_wrong_type.json  cfg_invalid_missing_required.json  cfg_invalid_services_wrong_type.json  cfg_invalid_wrong_type.json  cfg_isolation.json  cfg_port_isolation.json  cfg_rpvstp.json  cfg_services_log.json  cfg_stp_rstp.json  cfg_voice_vlan.json  default_cfg.json  test-cfg-acl.json  ucentral.schema.full.json  ucentral.schema.pretty.json
logger/: logger.go
scripts/: est_client.go  redis.go
src/configs/: interfaces.Vlan1
src/debian/: changelog  control  rules  ucentral-client.postinst  ucentral-client.prerm
src/docker/: Dockerfile  ca-cert.pem  manifest.json
src/ec-private/: README.md  build.sh
src/ec-private/ecapi/: CMakeLists.txt
src/ec-private/ecapi/generic/: CMakeLists.txt  api_print.c
src/ec-private/ecapi/include/: api_config.h  api_consts.h  api_device.h  api_print.h  api_session.h  api_stats.h  oid_define.h  snmp_helper.h
src/ec-private/ecapi/snmp/: CMakeLists.txt  device.c  helper.c  session.c  stats.c
src/ec-private/patch/curl/: curl-7.83.1.patch
src/ec-private/patch/libwebsockets/: libwebsockets-4.1.4.patch
src/ec-private/patch/ucentral/: CMakeLists.txt
src/ec-private/patch/ucentral/ucentral-client/: CMakeLists.txt  inet_net_pton.c
src/lib/systemd/system/: ucentral-client.service
src/scripts/: OLS_NOS_fixups.script  OLS_NOS_upgrade_override.script  docker-ucentral-client.sh  ucentral-client.sh  ucentral-partialupdate.sh
src/templates/: config_db.json.j2  copp_config.j2
src/templates/device/x86_64-accton_as4630_54pe-r0/Accton-AS4630-54PE/: copp_platform_config.j2
src/ucentral-client/: Makefile  base64.c  proto.c  router-utils.c  test-ucentral-json-parser.c  ucentral-client.c  ucentral-json-parser.c  ucentral-json-parser.h  ucentral-log.c  ucentral.h
src/ucentral-client/include/: base64.h  bitmap.h  router-utils.h  ucentral-log.h  ucentral-platform.h
src/ucentral-client/platform/brcm-sonic/: Makefile  plat-gnma.c  plat-revision.h
src/ucentral-client/platform/brcm-sonic/gnma/: Makefile  gnma_common.c  gnma_common.h
src/ucentral-client/platform/brcm-sonic/gnma/gnmi/: Makefile  gnmi_c_connector.cpp  gnmi_c_connector.h
src/ucentral-client/platform/brcm-sonic/gnma/gnmi/protos/: gnmi_ext.proto  openconfig_file_mgmt_private.proto  openconfig_image_management.proto  openconfig_poe.proto  os.proto  sonic_alarm.proto  sonic_config_mgmt.proto
src/ucentral-client/platform/brcm-sonic/netlink/: Makefile  netlink_common.c  netlink_common.h
src/ucentral-client/platform/ec/: CMakeLists.txt  plat-ec.c
src/ucentral-client/platform/example-platform/: Makefile  plat-example.c  plat-revision.h
src/ucentral-client/platform/larch-sonic/: .clang-format  CMakeLists.txt  Makefile  fdb.cpp  fdb.hpp  igmp.cpp  igmp.hpp  metrics.cpp  metrics.hpp  plat-larch.cpp  port.cpp  port.hpp  route.cpp  route.hpp  sai_redis.cpp  sai_redis.hpp  services.cpp  services.hpp  state.cpp  state.hpp  stp.cpp  stp.hpp  syslog.cpp  syslog.hpp  utils.cpp  utils.hpp  vlan.cpp  vlan.hpp
src/ucentral-client/platform/larch-sonic/cmake/: grpc.cmake
src/ucentral-client/platform/larch-sonic/protos/: CMakeLists.txt  gnmi.proto  metrics_config.proto  sonic_gnoi.proto  system.proto
tests/: ADDING_NEW_PLATFORM.md  MAINTENANCE.md  README.md  requirements.txt
tests/config-parser/: Makefile  TEST_CONFIG_README.md  config-parser.h  property-database-base.c  property-database-platform-brcm-sonic.c  property-database-platform-example.c  test-config-parser  test-config-parser.c  test-report.html  test-report.json  test-stubs.c
tests/config-parser/platform-mocks/: README.md  brcm-sonic.c  example-platform.c
tests/schema/: SCHEMA_VALIDATOR_README.md  validate-schema.py
tests/tools/: extract-schema-properties.py  fetch-schema.sh  find-property-line-numbers.py  generate-database-from-schema.py  generate-platform-database-from-schema.py  generate-property-database.py  rebuild-property-database.py  update-test-config-parser.py
utils/: cmd.go  utils.go
